--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,3 @@
 @import "tailwindcss";
+@import 'primereact/resources/themes/lara-light-indigo/theme.css';  /* Tema */
+@import 'primereact/resources/primereact.min.css';  /* Estilos principais */
